Fetcher should deliver CallbackCanceled instead of ShutdownInProgress to callbacks on cancellation

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.3.11
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Repl 18 (08/05/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Fetcher checks an internal flag _shutdown that is set on cancellation. If the remote command callback detects that this flag is set, it should return a status consistent with remote command cancellation (CallbackCanceled)

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: