SERVER-25148 Fetcher should deliver CallbackCanceled instead of ShutdownInProgress to callbacks on cancellation

This reverts commit 4d00c7cd182a2a31ae36bba10bb5b23f541e7ca2.